[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Weapons/Battleaxe01.png" type="Texture" id=3]
[ext_resource path="res://Weapons/Hammer01.png" type="Texture" id=4]
[ext_resource path="res://Weapons/Club01.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 24.0
margin_right = 512.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
text = "TIMELEFT: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 88.0
margin_right = 512.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 2 )
text = "Insurance Money Earned: $0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -44.0
margin_right = 512.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "BAD LANDLORD"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -86.5
margin_top = -192.0
margin_right = 86.5
margin_bottom = -113.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AxeUI" type="Sprite" parent="."]
visible = false
position = Vector2( 885, 525 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="HammerUI" type="Sprite" parent="."]
visible = false
position = Vector2( 936, 525 )
texture = ExtResource( 4 )

[node name="BatUI" type="Sprite" parent="."]
visible = false
position = Vector2( 986, 525 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
